@@ -19,8 +19,6 @@
  */
 package org.zaproxy.zap.extension.soap.spider;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.parosproxy.paros.Constant;
 import org.parosproxy.paros.control.Control;
@@ -34,8 +32,7 @@ import org.zaproxy.zap.extension.soap.ExtensionImportWSDL;
 public class ExtensionSoapSpider extends ExtensionAdaptor {
 
     private static final List<Class<? extends Extension>> DEPENDENCIES =
-            Collections.unmodifiableList(
-                    Arrays.asList(ExtensionSpider2.class, ExtensionImportWSDL.class));
+            List.of(ExtensionSpider2.class, ExtensionImportWSDL.class);
 
     private SpiderParser spiderParser;
 
